--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed" rel="stylesheet">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed" rel="stylesheet">
+	<title>Document</title>
 </head>
 
 <body>
-  <div id="root"></div>
+	<div id="root"></div>
 
-  <style>
+	<!-- <style>
     * {
       font-family: 'IBM Plex Sans Condensed', sans-serif;
       box-sizing: border-box;
@@ -55,7 +55,7 @@
       color: white;
       width: 140px;
     }
-  </style>
+  </style> -->
 </body>
 
 </html>
